cmake_minimum_required(VERSION 3.15)
project(assignment3)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(bin)
include_directories(includes)
include_directories(lib)
include_directories(tests)

add_executable(assignment3
        bin/codegen
        bin/diff-colours
        bin/diffc
        bin/optimiser-e
        bin/optimiser-r
        bin/parser
        bin/pretty
        bin/run-tests
        bin/tokens
        includes/abstract-syntax-tree.h
        includes/iobuffer.h
        includes/symbols.h
        includes/tokeniser.h
        lib/cats/bin/codegen
        lib/cats/bin/diff-colours
        lib/cats/bin/optimiser-e
        lib/cats/bin/optimiser-r
        lib/cats/bin/parser
        lib/cats/bin/pretty
        lib/cats/bin/tokens
        lib/cats/lib.a
        lib/macos/bin/codegen
        lib/macos/bin/diff-colours
        lib/macos/bin/optimiser-e
        lib/macos/bin/optimiser-r
        lib/macos/bin/parser
        lib/macos/bin/pretty
        lib/macos/bin/tokens
        lib/macos/lib.a
        tests/01/Main.jack
        tests/01/Main.jack.parser.codegen.Cvm
        tests/01/Main.jack.parser.pretty.Pjack
        tests/01/Main.jack.parser.Pxml
        tests/02/Main.jack
        tests/02/Main.jack.parser.codegen.Cvm
        tests/02/Main.jack.parser.opt-r.Pxml
        tests/02/Main.jack.parser.pretty.Pjack
        tests/02/Main.jack.parser.Pxml
        tests/03/Main.jack
        tests/03/Main.jack.parser.codegen.Cvm
        tests/03/Main.jack.parser.pretty.Pjack
        tests/03/Main.jack.parser.Pxml
        tests/04/Main.jack
        tests/04/Main.jack.parser.codegen.Cvm
        tests/04/Main.jack.parser.opt-r.Pxml
        tests/04/Main.jack.parser.pretty.Pjack
        tests/04/Main.jack.parser.Pxml
        tests/05/Main.jack
        tests/05/Main.jack.parser.codegen.Cvm
        tests/05/Main.jack.parser.opt-r.Pxml
        tests/05/Main.jack.parser.pretty.Pjack
        tests/05/Main.jack.parser.Pxml
        tests/06/Main.jack
        tests/06/Main.jack.parser.codegen.Cvm
        tests/06/Main.jack.parser.opt-r.Pxml
        tests/06/Main.jack.parser.pretty.Pjack
        tests/06/Main.jack.parser.Pxml
        tests/07/Main.jack
        tests/07/Main.jack.parser.codegen.Cvm
        tests/07/Main.jack.parser.pretty.Pjack
        tests/07/Main.jack.parser.Pxml
        tests/08/Main.jack
        tests/08/Main.jack.parser.codegen.Cvm
        tests/08/Main.jack.parser.pretty.Pjack
        tests/08/Main.jack.parser.Pxml
        tests/09/Main.jack
        tests/09/Main.jack.parser.codegen.Cvm
        tests/09/Main.jack.parser.pretty.Pjack
        tests/09/Main.jack.parser.Pxml
        tests/10/Main.jack
        tests/10/Main.jack.parser.codegen.Cvm
        tests/10/Main.jack.parser.opt-r.Pxml
        tests/10/Main.jack.parser.pretty.Pjack
        tests/10/Main.jack.parser.Pxml
        tests/11/Main.jack
        tests/11/Main.jack.parser.codegen.Cvm
        tests/11/Main.jack.parser.opt-r.Pxml
        tests/11/Main.jack.parser.pretty.Pjack
        tests/11/Main.jack.parser.Pxml
        tests/12/Main.jack
        tests/12/Main.jack.parser.Pxml
        tests/13/Main.jack
        tests/13/Main.jack.parser.Pxml
        tests/14/Main.jack
        tests/14/Main.jack.parser.Pxml
        tests/15/Main.jack
        tests/15/Main.jack.parser.Pxml
        tests/16/Main.jack
        tests/16/Main.jack.parser.codegen.Cvm
        tests/16/Main.jack.parser.opt-r.Pxml
        tests/16/Main.jack.parser.pretty.Pjack
        tests/16/Main.jack.parser.Pxml
        tests/17/Main.jack
        tests/17/Main.jack.parser.codegen.Cvm
        tests/17/Main.jack.parser.opt-e.Pxml
        tests/17/Main.jack.parser.pretty.Pjack
        tests/17/Main.jack.parser.Pxml
        tests/18/Main.jack
        tests/18/Main.jack.parser.codegen.Cvm
        tests/18/Main.jack.parser.opt-e.Pxml
        tests/18/Main.jack.parser.pretty.Pjack
        tests/18/Main.jack.parser.Pxml
        tests/19/Main.jack
        tests/19/Main.jack.parser.codegen.Cvm
        tests/19/Main.jack.parser.opt-e.Pxml
        tests/19/Main.jack.parser.pretty.Pjack
        tests/19/Main.jack.parser.Pxml
        tests/20/Main.jack
        tests/20/Main.jack.parser.codegen.Cvm
        tests/20/Main.jack.parser.opt-e.Pxml
        tests/20/Main.jack.parser.opt-r.Pxml
        tests/20/Main.jack.parser.pretty.Pjack
        tests/20/Main.jack.parser.Pxml
        tests/ArrayTst/Main.jack
        tests/ArrayTst/Main.jack.parser.codegen.Cvm
        tests/ArrayTst/Main.jack.parser.pretty.Pjack
        tests/ArrayTst/Main.jack.parser.Pxml
        tests/Average/Main.jack
        tests/Average/Main.jack.parser.codegen.Cvm
        tests/Average/Main.jack.parser.pretty.Pjack
        tests/Average/Main.jack.parser.Pxml
        tests/ComplexA/Main.jack
        tests/ComplexA/Main.jack.parser.codegen.Cvm
        tests/ComplexA/Main.jack.parser.pretty.Pjack
        tests/ComplexA/Main.jack.parser.Pxml
        tests/ConvertB/Main.jack
        tests/ConvertB/Main.jack.parser.codegen.Cvm
        tests/ConvertB/Main.jack.parser.opt-e.Pxml
        tests/ConvertB/Main.jack.parser.opt-r.Pxml
        tests/ConvertB/Main.jack.parser.pretty.Pjack
        tests/ConvertB/Main.jack.parser.Pxml
        tests/ElSquare/Main.jack
        tests/ElSquare/Main.jack.parser.codegen.Cvm
        tests/ElSquare/Main.jack.parser.pretty.Pjack
        tests/ElSquare/Main.jack.parser.Pxml
        tests/ElSquare/Square.jack
        tests/ElSquare/Square.jack.parser.codegen.Cvm
        tests/ElSquare/Square.jack.parser.pretty.Pjack
        tests/ElSquare/Square.jack.parser.Pxml
        tests/ElSquare/SquareGame.jack
        tests/ElSquare/SquareGame.jack.parser.codegen.Cvm
        tests/ElSquare/SquareGame.jack.parser.pretty.Pjack
        tests/ElSquare/SquareGame.jack.parser.Pxml
        tests/Minint/Main.jack
        tests/Minint/Main.jack.parser.codegen.Cvm
        tests/Minint/Main.jack.parser.opt-e.Pxml
        tests/Minint/Main.jack.parser.pretty.Pjack
        tests/Minint/Main.jack.parser.Pxml
        tests/Pong/Ball.jack
        tests/Pong/Ball.jack.parser.codegen.Cvm
        tests/Pong/Ball.jack.parser.opt-e.Pxml
        tests/Pong/Ball.jack.parser.pretty.Pjack
        tests/Pong/Ball.jack.parser.Pxml
        tests/Pong/Bat.jack
        tests/Pong/Bat.jack.parser.codegen.Cvm
        tests/Pong/Bat.jack.parser.pretty.Pjack
        tests/Pong/Bat.jack.parser.Pxml
        tests/Pong/Main.jack
        tests/Pong/Main.jack.parser.codegen.Cvm
        tests/Pong/Main.jack.parser.pretty.Pjack
        tests/Pong/Main.jack.parser.Pxml
        tests/Pong/PongGame.jack
        tests/Pong/PongGame.jack.parser.codegen.Cvm
        tests/Pong/PongGame.jack.parser.opt-e.Pxml
        tests/Pong/PongGame.jack.parser.pretty.Pjack
        tests/Pong/PongGame.jack.parser.Pxml
        tests/Seven/Main.jack
        tests/Seven/Main.jack.parser.codegen.Cvm
        tests/Seven/Main.jack.parser.opt-e.Pxml
        tests/Seven/Main.jack.parser.pretty.Pjack
        tests/Seven/Main.jack.parser.Pxml
        tests/Square/Main.jack
        tests/Square/Main.jack.parser.codegen.Cvm
        tests/Square/Main.jack.parser.pretty.Pjack
        tests/Square/Main.jack.parser.Pxml
        tests/Square/Square.jack
        tests/Square/Square.jack.parser.codegen.Cvm
        tests/Square/Square.jack.parser.pretty.Pjack
        tests/Square/Square.jack.parser.Pxml
        tests/Square/SquareGame.jack
        tests/Square/SquareGame.jack.parser.codegen.Cvm
        tests/Square/SquareGame.jack.parser.pretty.Pjack
        tests/Square/SquareGame.jack.parser.Pxml
        codegen
        codegen.cpp
        Makefile
        Makefile-extras
        optimiser-e
        optimiser-e.cpp
        optimiser-r
        optimiser-r.cpp
        parser
        parser.cpp
        pretty
        pretty.cpp)
